force-app/main/default/objects/Bug__c/Bug__c.object-meta.xml
<CustomObject>
    <label>Bug</label>
    <nameField>
        <displayFormat>BUG-{0000}</displayFormat>
        <label>Bug Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>