force-app/main/default/objects/Bug__c/fields/First_Occurence_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Occurence_Date__c</fullName>
    <label>First Occurence Date</label>
    <summarizedField>Bug_Occurrence__c.Occurence_Date__c</summarizedField>
    <summaryForeignKey>Bug_Occurrence__c.Bug__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>