force-app/main/default/objects/Bug__c/fields/Last_Occurence_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Occurence_Date__c</fullName>
    <label>Last Occurence Date</label>
    <summarizedField>Bug_Occurrence__c.Occurence_Date__c</summarizedField>
    <summaryForeignKey>Bug_Occurrence__c.Bug__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>