force-app/main/default/objects/Bug__c/fields/Related_Flow__c.field-meta.xml
<CustomField>
    <fullName>Related_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Flow</label>
    <referenceTo>FlowRecord</referenceTo>
    <relationshipLabel>Bugs</relationshipLabel>
    <relationshipName>Bugs</relationshipName>
    <type>Lookup</type>
</CustomField>