force-app/main/default/objects/Bug__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Short name or title describing the bug (e.g. “Flow X Fails on Condition Y”).</description>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>