force-app/main/default/objects/Bug__c/fields/Total_Occurrences__c.field-meta.xml
<CustomField>
    <fullName>Total_Occurrences__c</fullName>
    <label>Total Occurrences</label>
    <summaryForeignKey>Bug_Occurrence__c.Bug__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>