force-app/main/default/objects/Bug__c/listViews/Resolved.listView-meta.xml
<ListView>
    <fullName>Resolved</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Severity__c</columns>
    <columns>Total_Occurrences__c</columns>
    <columns>Last_Occurence_Date__c</columns>
    <columns>First_Occurence_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Resolved</value>
    </filters>
    <label>Resolved</label>
</ListView>